app/assets/stylesheets/application.scss
/* ... */
body {
  min-width: 320px;
  position: relative;
  margin: 0;
  padding-bottom: 120px;
  min-height: 100%;
}

.footer {
  padding: 10px;
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: #ddd;
  .footer-logo {
    display: block;
    float: right;
    margin: 0 5px;
    img { height: 64px; }
  }
}

// Vertically aligned
.vertical-align {
  display: flex;
  flex-direction: row;
}

.vertical-align > [class^="col-"],
.vertical-align > [class*=" col-"] {
  display: flex;
  align-items: center; /* Align the flex-items vertically */
  //justify-content: center; /* Optional, to align inner flex-items horizontally within the column  */
}

ul.featureblocks {
  padding: 10px 0;
  margin: 0 -10px;
  list-style: none;
  overflow: auto;

  li {
    float: left;
    width: 20%;
    padding: 0 12px;
    border-right: 1px dotted #ccc;
    &:last-child {
      border: none;
    }
    @media (max-width: $screen-md) {
      width: 50%;
      border-right: none;
      margin-bottom: 10px;
    }
    h2 {
      margin-top: 10px;
      font-size: 20px;
      line-height: 24px;
      font-weight: normal
    }
    a {
      color: #444;
    }
    p {
      margin: 5px 0;
    }
  }
}

.searchbox {
  width: 640px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 20px;
  margin-bottom: 5px;
  padding: 20px;
  background-color: #efefef;
  position: relative;
  box-shadow: 0 0 5px #333;
  -webkit-box-shadow: 0 0 5px #333;
  -moz-box-shadow: 0 0 5px #333;
  -webkit-border-radius: 3px !important;
  -moz-border-radius: 3px !important;
  border-radius: 3px !important;
  text-align: center;
}

.homepage #sb-search {
  background-color: transparent;
  padding: 0;
}

sup {
  vertical-align: top;
  position: relative;
  top: 5px;
}

.announcement {
  color: #333333;
  border: 1px solid #DDD;
  background: #FFFFCC;
  padding: 0.3em 0.6em;
  margin-bottom: 1em;
  line-height: 1.7;
}

#front-page-announcement {
  font-size: 120%;
  font-weight: bold;
  text-align: center;
  margin-bottom: 0;
  margin-top: 5px;
}

